# fastapi-template

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: __init__.py
app/api/v1/jwt/: __init__.py  get.py  post.py
app/api/v1/user/: __init__.py  get.py  post.py
app/core/: config.py
app/database/: session.py
app/database/model/: user.py
app/utils/: auth.py
app/utils/sso/: introspection.py  introspection_schema.py
migrations/: env.py  script.py.mako
migrations/versions/: 2ab5fe2f92f2_init.py  67e287699eb0_init.py  c75df8665744_cambiamos_id_a_uuid.py
